--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ nav.side-nav a.active {
   backdrop-filter: blur(2px);
 }
 
-/* === Главная страница: двухколоночный стиль === */
+/* === Главная страница: две колонки === */
 .main-content-flex {
   display: flex;
   flex-direction: row;
@@ -260,51 +260,6 @@ h1 {
   font-weight: bold;
 }
 
-/* --- Адаптив --- */
-@media (max-width: 1100px) {
-  .main-content-flex {
-    flex-direction: column;
-    height: auto;
-    min-height: unset;
-    gap: 18px;
-  }
-  .main-left, .main-right {
-    max-width: 100%;
-    width: 100%;
-    height: auto;
-    padding: 0;
-  }
-  .main-image, .admin-block {
-    max-width: 100%;
-  }
-}
-
-@media (max-width: 650px) {
-  .main-content-flex {
-    flex-direction: column;
-    gap: 10px;
-    padding: 10px 0 0 0;
-    min-height: unset;
-    height: auto;
-  }
-  .main-left, .main-right {
-    max-width: 100%;
-    width: 100%;
-    height: auto;
-    padding: 0;
-  }
-  .main-image, .admin-block {
-    max-width: 100%;
-  }
-  .server-description {
-    font-size: 0.97em;
-    padding-right: 0;
-  }
-  h1 {
-    font-size: 1.2em;
-  }
-}
-
 /* --- Кнопки --- */
 .button-group {
   display: flex;
@@ -358,8 +313,6 @@ footer {
   box-sizing: border-box;
   list-style: none;
 }
-
-/* --- Остальной ваш CSS (новости, списки, адаптив и т.д.) --- */
 
 /* === Новости === */
 .news-item {
@@ -526,7 +479,7 @@ ul li::before {
     height: auto;
     padding: 0;
   }
-  .main-image {
+  .main-image, .admin-block {
     max-width: 100%;
   }
 }
@@ -545,7 +498,7 @@ ul li::before {
     height: auto;
     padding: 0;
   }
-  .main-image {
+  .main-image, .admin-block {
     max-width: 100%;
   }
   .server-description {
