--- a/style.css
+++ b/style.css
@@ -565,3 +565,43 @@ ul:not(.admin-block ul) li::before {
   box-shadow: 0 0 30px rgba(255,140,0,0.8);
   user-select: none;
 }
+
+/* --- Только для мобильной версии --- */
+@media (max-width: 900px) {
+
+  /* Новости: изображения не вылезают за края */
+  .news-images-wrapper img {
+    max-width: 100vw;
+    width: 100%;
+    height: auto;
+    max-height: 40vw;
+    object-fit: contain;
+    box-sizing: border-box;
+  }
+}
+
+/* Дополнительная корректировка для совсем маленьких экранов */
+@media (max-width: 650px) {
+  .news-images-wrapper img {
+    max-width: 98vw;
+    max-height: 55vw;
+  }
+}
+
+/* Правила: отступ для админов на мобильных */
+@media (max-width: 900px) {
+  .admin-block li {
+    padding-left: 1.3em;
+    position: relative;
+  }
+  .admin-block li::before {
+    content: "◆";
+    color: #ffb84d;
+    position: absolute;
+    left: 0;
+    font-size: 1.1em;
+    top: 0.1em;
+    font-family: 'Georgia', serif;
+    /* Добавлен ромбик только для мобильной версии */
+  }
+}
